# cloud-finops-decision-agent

./: .env.example  .gitignore  .infisical.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALS.md  FINDINGS.md  PRD.md  README.md  REFACTOR.md  SECURITY.md  SPEC.md  SUPPORT.md  TASKS.md  cloud-providers.json  handover.md  justfile  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml
api/: agent.py  agent_prompt.py  budget_policy.py  budget_store.py  budgets.py  config.py  hooks.py  main.py  middleware.py  observability.py  observability_agents_bridge.py  tools.py  transport.py  wire.py
api/runtime/: __init__.py  _reasoning_model.py  deepagents.py  openai_agents.py  types.py
architecture-decisions/: 0001-python-parquet-index.md  0002-index-lives-in-normalize.md  0003-citation-stable-id-jsonpath.md  0004-schema-drift-detection.md  0005-data-quality-envelope.md  0006-flex-rules-over-shape-catalog.md  0007-rate-rows-composite-citations.md  0008-vertical-slice-api-and-citation-excerpt.md  0009-agent-runtime-in-fastapi-openai-agents-sdk.md  0010-observability-via-otel-jsonl.md  0011-public-endpoint-threat-model.md  0012-agent-runtime-port.md  0013-verified-answer-plan-rendering.md  0014-agent-hardening-threat-register.md  README.md
backend/: justfile  pyproject.toml
backend/tests/: conftest.py  helpers.py  test_agent_security.py  test_agent_tools.py  test_agui_transport.py  test_answer_plan.py  test_assistant_transport_security.py  test_budgets_hashed_id.py  test_budgets_hooks_turn_cap.py  test_budgets_middleware.py  test_budgets_session_cap.py  test_budgets_store.py  test_codriver_tools.py  test_deepagents_adapter.py  test_eval_graders.py  test_guardrails.py  (+16 more)
config/: models.yaml
docs/: dependency-exceptions.md
evals/: README.md
frontend/: README.md  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
gates/: _shared.py  aws.py  azure.py  gcp.py  ibm.py  linode.py  oracle.py  vultr.py
normalize/: __main__.py  citation_excerpt.py  citations.py  data_quality.py  flex_synthesis.py  index.py  instance_ranking.py  loader.py  query.py  query_models.py  schema.py  snapshot_time.py  taxonomy_loader.py  verifier.py
prompts/: finops_agent.md
screenshots/: README.md  dashboard-mock.html
scripts/: agent_smoke.py
tests/: conftest.py  test_agent_tools.py  test_budgets_hashed_id.py  test_budgets_hooks_turn_cap.py  test_budgets_middleware.py  test_budgets_session_cap.py  test_budgets_store.py  test_deepagents_adapter.py  test_e2e_real.py  test_integration_api.py  test_integration_data_quality.py  test_integration_excerpt.py  test_integration_query.py  test_observability_bridge.py  test_observability_pricing.py  test_prompt_loading.py  test_reasoning_roundtrip.py  test_runtime_routing.py
web/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
(+262 files in other folders)
