[project]
name = "cloud-finops-decision-agent"
version = "0.0.1"
description = "Citation-backed cloud pricing tool where an agent does the work"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "jsonpath-ng>=1.8.0",
    "orjson>=3.11.9",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
]
