[project]
name = "cloud-finops-decision-agent"
version = "0.0.1"
description = "Citation-backed cloud pricing tool where an agent does the work"
requires-python = ">=3.13"
dependencies = [
    "assistant-stream>=0.0.32",
    "fastapi[standard]>=0.115",
    "httpx>=0.28",
    "jsonpath-ng>=1.8.0",
    # langchain backs the default runtime (AGENT_RUNTIME=deepagents), so it is a
    # core dependency. The OpenAI Agents SDK backs the alternative runtime and is
    # imported only lazily (the runtime adapter and the tracing bridge in
    # src/api/observability_agents_bridge.py), so it is an optional extra below.
    "langchain>=1.3",
    "langchain-openai>=0.3",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-semantic-conventions>=0.63b1",
    "orjson>=3.11.9",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
# The OpenAI Agents SDK runtime (ADR-0012, AGENT_RUNTIME=openai_agents). Optional
# because the default runtime is langchain; install with
# `uv sync --extra openai-agents` to run the agent on the Agents SDK.
openai-agents = [
    "openai-agents>=0.17.4",
]

[dependency-groups]
# openai-agents is in the dev group so the local test suite exercises both
# runtimes (the gated tests under tests/ import it) even though it is an
# optional runtime dependency.
dev = [
    "openai-agents>=0.17.4",
    "pytest>=8.3",
    "ruff>=0.8",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = ["api", "ingest", "normalize", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "e2e: end-to-end tests that run against the real snapshots in store/ (skipped when none are present)",
]
